<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019 Naman Dwivedi.
  ~
  ~ Licensed under the GNU General Public License v3
  ~
  ~ This is free software: you can redistribute it and/or modify it
  ~ under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ This software is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  ~
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_sort_by_az"
        android:title="@string/sort_order_entry_az" />
    <item
        android:id="@+id/menu_sort_by_za"
        android:title="@string/sort_order_entry_za" />
    <item
        android:id="@+id/menu_sort_by_year"
        android:title="@string/sort_order_entry_year" />
    <item
        android:id="@+id/menu_sort_by_number_of_songs"
        android:title="@string/sort_order_entry_number_of_songs" />

</menu>